<resources>
    <string name="app_name">StarWars</string>
    <string name="name">Name:</string>
    <string name="rotation_period">Rotation period:</string>
    <string name="orbital_period">Orbital period:</string>
    <string name="diameter">Diameter:</string>
    <string name="climate">Climate:</string>
    <string name="gravity">Gravity:</string>
    <string name="terrain">Terrain:</string>
    <string name="surface_water">Surface Water:</string>
    <string name="population">Population:</string>
    <string name="residents_list">Residents List</string>
    <string name="resident_list">Resident List</string>
    <string name="cancel">cancel</string>
    <string name="height">Height:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="skin_color">Skin Color:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="created">Created:</string>
    <string name="homeworld">Homeworld:</string>
    <string name="you_already_liked_this">You already liked this</string>
    <string name="users_db_name">UsersDB</string>
</resources>
